Bug 42708 - EDITING: Backspaces after leading TAB in Numbering move caret out of sheet
Summary: EDITING: Backspaces after leading TAB in Numbering move caret out of sheet
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: x86-64 (AMD64) Linux (All)
: high major
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0
Keywords:
Depends on:
Blocks:
 
Reported: 2011-11-08 07:49 UTC by Matt
Modified: 2014-03-16 01:29 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
Screenshot (322.56 KB, image/png)
2012-03-17 01:56 UTC, Rainer Bielefeld Retired
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Matt 2011-11-08 07:49:14 UTC
When i put a bullet list in a document, if i press tab button before press any other key and then i press the backspace key, the cursor leaves the margin of the document. I recorded a video showing this, you can see here[0].
My version of LibreOffice is the 3.4.3 in Debian GNU/Linux and i tested with similar results in a OOo 3.2 in Ubuntu 10.04.

Sorry for my english, but im from Argentina.

Grettings

[0]: http://youtu.be/yhNfh1vsp8Y
Comment 1 Nikos 2011-12-27 23:15:31 UTC
The behavior is reproducible on LibreOffice 3.4.4RC1
Comment 2 Rainer Bielefeld Retired 2012-03-17 01:54:34 UTC
[Reproducible] with "LibreOffice 3.5.1.2 German UI/Locale [Build-ID: dc9775d-05ecbee-0851ad3-1586698-727bf66] on German WIN7 Home Premium (64bit).
Same with OOo 3.1.1, 3.3 and 3.4Beta, so I believe it's inherited from OOo (worked fine with OOo 1.1.4).

I see here 2 Problems:

a) Backspace imitates the function of <shift+tab> (what is the key for some kind of UNDO of increasing the indent by the leading TAB

b) <shift+tab> also moves the caret out of the sheet proceeding as per report but using it instead of <backspace>

I have no idea concerning intended behavior, but the observed one , will ask.
Comment 3 Rainer Bielefeld Retired 2012-03-17 01:56:22 UTC
Created attachment 58585 [details]
Screenshot

Screenshot shows caret out of sheet area
Comment 4 Harald Koester 2012-03-17 11:06:49 UTC
Hello Rainer,

to my opinion the problem begins already with the tab. If you try to insert it directly after the bullet not a tab is inserted but the indentation is increased. And if you press the backspace button afterwards the indentation is decreased. To my opinion both, Tab and BS, should not influence the indentation.

During reproducing this bug I found some more possibilities to move the cursor beyond the paper margins (always with paragraph aligned left):
[1] Just click "Decrease Indent" some times.
[2] Left paper margin: Format > Paragraph... > Indents & Spacing > Indent > Before text > Input higher negativ value
[3] Right paper margin: Format > Paragraph... > Indents & Spacing > Indent > After text > Input higher negativ value, insert characters up to the right paper margin

Observed with LO versions 3.4.5 and 3.5.0 with Win XP

Harald
Comment 5 Harald Koester 2013-01-10 10:16:06 UTC
Bug still exists in Versions 3.6.4 and 4.0 beta2

See also bug 41469.
Comment 6 Commit Notification 2014-01-23 20:35:14 UTC
Bjoern Michaelsen committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a3506eb7254dcda62de0ddfa4fad35870e0d514c

fdo#42708: bullets should not exit stage left ...



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Björn Michaelsen 2014-01-23 20:38:43 UTC
Fixed on master, bullets should now not move left of the border.
The general behavior is indeed awkward, but as intended (see referenced bug). Changing this would be a different UI bug, so if you want to have further changes, please file an new bug about this.