fdo#42708: bullets should not exit stage left ...

... that is reserved for actors.

Change-Id: I081e811179f12e610c9d8e9727c79bb69c548365